# gpu-slicer

./: .gitmodules  CMakeLists.txt  README.md  animate.py
cuda/: CMakeLists.txt
cuda/src/cuda/kernels/: add_kernel.cu  add_kernel.cuh  intersect_kernel.cu  intersect_kernel.cuh
lib/: CMakeLists.txt
lib/geometry/: CMakeLists.txt
lib/geometry/src/geometry/: bbox.cpp  bbox.hpp  bbox.test.cpp  clipper.cpp  clipper.hpp  clipper.test.cpp  geometry.cpp  geometry.hpp  intersect.cpp  intersect.hpp  intersect.test.cpp
lib/slicer/: CMakeLists.txt  config.hpp.in
lib/slicer/src/slicer/: adjacency_list.hpp  adjacency_list.test.cpp  cuda.test.cpp  main.test.cpp  slice_outlines.cpp  slice_outlines.hpp  slice_outlines.test.cpp  slicer.cpp  slicer.hpp  slicer.test.cpp  stl.cpp  stl.hpp  svg.cpp  svg.hpp
lib/spatial_index/: CMakeLists.txt
lib/spatial_index/src/spatial_index/: bvh.cpp  bvh.hpp  gpu_bvh.cpp  gpu_bvh.hpp  gpu_bvh.test.cpp  spatial_index.hpp  variant.hpp
slicer/: CMakeLists.txt
slicer/src/slicer/: adjacency_list.cpp  adjacency_list.hpp  adjacency_list.test.cpp  bbox.cpp  bbox.hpp  bbox.test.cpp  bvh.cpp  bvh.hpp  bvh.test.cpp  clipper.cpp  clipper.hpp  clipper.test.cpp  cuda.test.cpp  fwd.hpp  geometry.cpp  geometry.hpp  intersect.cpp  intersect.hpp  intersect.test.cpp  main.test.cpp  mesh.cpp  mesh.hpp  mesh.test.cpp  slice_outlines.cpp  slice_outlines.hpp  slice_outlines.test.cpp  slicer.cpp  slicer.hpp  slicer.test.cpp  stl.cpp  stl.hpp  stl.test.cpp  svg.cpp  svg.hpp  timing.hpp
slicer/src/spatial_index/: bvh.cpp  bvh.hpp  bvh.test.cpp  no_spatial_index.cpp  no_spatial_index.hpp  spatial_index.hpp
